# FirstOpenGLProject

./: CMakeLists.txt
Src/: main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
